--- a/package.json
+++ b/package.json
@@ -6,19 +6,30 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "serve": "npx http-server ./out",
     "lint": "next lint"
   },
   "dependencies": {
+    "classnames": "^2.3.2",
+    "next": "14.0.2",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.0.2"
+    "sass": "^1.69.5",
+    "telechart": "^1.0.1",
+    "use-resize-observer": "^9.1.0"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@svgr/webpack": "^8.1.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "14.0.2"
-  }
+    "eslint-config-next": "14.0.2",
+    "stylelint": "^15.11.0",
+    "stylelint-config-idiomatic-order": "^9.0.0",
+    "stylelint-config-standard": "^34.0.0",
+    "stylelint-config-standard-scss": "^11.1.0",
+    "typescript": "^5"
+  },
+  "license": "MIT"
 }
