--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -4,6 +4,7 @@
     "stylelint-config-idiomatic-order"
   ],
   "rules": {
+    "selector-class-pattern": null,
     "selector-pseudo-class-no-unknown": [
       true,
       {
