--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "not dead"
   ],
   "dependencies": {
+    "@next/third-parties": "^14.0.3",
     "classnames": "^2.3.2",
     "date-fns": "^2.30.0",
     "next": "14.0.2",
